book shelf intergrated

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="account.html">Sign In</a></li>
             <li><a href="account.html">Sign Up</a></li>
             <div class="image">
-                <img src="images/books.jpg" alt="people" width="300px" height="300px">
+                <img src="images/nice.jpeg" alt="people" width="200px" height="200px">
             </div>
         </div>
         <div class="menu-container">
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="container2">
-            <img src="images/books.jpg" alt="Image" width="100px" height="100px">
+            <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
             <h1>About Us</h1>
             <p> We offer a wide range of subjects with competent and qualified Teachers 
                 from Key Stage 1 to Key Stage 5.<br>
