--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </body>
     <footer>
         iLearn Tuitions.<br>
-        Call/SMS/WhatsApp +254707872520<br>
+        Call/SMS/WhatsApp<b> +254707872520</b><br>
         <hr>
         <p>Copyright © 2023.All rights reserved.<br>
            Website By: SoftLink Technologies.<a href="tel:+254707872520" target="blank">Call Us</a> <br>
