--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 </p>
                 <button type="button"><a href="account.html">Enroll Now to Our Tuitions Programs</a></button>
             </div>
-            <li><a href="account.html">Sign In</a></li>
-            <li><a href="account.html">Sign Up</a></li>
+            <li><a href="account.html" style="font-size: larger; color:brown">Sign In</a></li>
+            <li><a href="account.html" style="font-size: larger; color:brown;">Sign Up</a></li>
             <div class="image">
                 <img src="images/nice.jpeg" alt="people" width="200px" height="200px">
             </div>
