removed email address and inserted 1234

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
             <a href="tel:+254707872520" target="blank"><img src="images/Cell.png" alt="cell phone" width="50" height="50"></a>
             <a href="https://wa.me/+254707872520" target="_blank"><img src="images/whatsapp.png" alt="value additin" width="50" height="50"></a>
-            <a href="mailto:naselfih@gmail.com" target="_blank"><img src="images/mail.png" alt="linked in" width="50" height="50"></a>
+            <a href="mailto:1234@gmail.com" target="_blank"><img src="images/mail.png" alt="linked in" width="50" height="50"></a>
             </p></span>
     </body>
     <footer>
