--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <div class="container2">
             <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
             <h1>About Us</h1>
-            <p style="color: brown; font-size: large;"> We offer a wide range of courses with competent and qualified Teachers 
+            <p style="color: brown; font-size: large;"> - We offer a wide range of courses with competent and qualified Teachers 
                 from Key Stage 1 to Key Stage 5.<br>
-                We do tuitions to students and Pupils from different regions utilizing the online resources, 
+                - We do tuitions to students and Pupils from different regions utilizing the online resources, 
                 and our online plartform are easy to use and compatible with most gadgets.<br>
-                Intrested teacher to work with us? <span><a href="account.html" style="font-size: larger;">Sign Up</a></span>
+                - Intrested teacher to work with us? <span><a href="account.html" style="font-size: larger;">Sign Up</a></span>
 
             </p>
         </div>
