--- a/account.html
+++ b/account.html
@@ -70,7 +70,7 @@
             Students Account</h1>
         <input type="text" placeholder="Firstname" />
         <input type="text" placeholder="Secondname" />
-        <input type="email" placeholder="Year Group" />
+        <input type="text" placeholder="Year Group" />
         <input type="text" placeholder="Phone Number" />
         <input type="password" placeholder="Password" />
         <input type="text" placeholder="Subjects" />
