--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li><a href="#">Environmental Activities </a></li>
                         <li><a href="#">language Activities </a></li>
                         <li><a href="#">Agricultural  Activities </a></li>
-                        <li><a href="#">Environmental Activities </a></li>
+                        <li><a href="#">Religoius Activities </a></li>
                       </ul>
                 </li>
                     <li><a href="#">Calendar</a></li>
