--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                     <span class="logo-text-black">iLearn</span><span class="logo-text-orange">Tuitions</span>
                 </div>
                 <div class="nav-links">
-                    <li><a href="#">Dashboard</a></li>
                     <li>
                     <a >Courses &#9662;</a>
                     <ul class="dropdown">
@@ -35,12 +34,12 @@
             </nav>
             <div class="text">
                 <p>Welcome to iLearn Tuitions!<br>
-                    Home to Intergrated and high notch Tuition programs.
                 </p>
                 <button type="button"><a href="account.html">Enroll Now to Our Tuitions Programs</a></button>
             </div>
             <li><a href="account.html" style="font-size: larger; color:brown">Sign In</a></li>
             <li><a href="account.html" style="font-size: larger; color:brown;">Sign Up</a></li>
+            <li><a href="mission.html" style="font-size: larger; color:brown;">Mission Statement</a></li>
             <div class="image">
                 <img src="images/nice.jpeg" alt="people" width="200px" height="200px">
             </div>
@@ -75,24 +74,42 @@
                     </div>
                     <div class="card">
                         <div class="container">
-                            <h4><b>Mision</b></h4>
-                            <p>Graphic Designer Vestibulum commodo porttitor velit,
-                                eu dignissim sapien. Ut ultricies risus
-                                 quis dolor molestie maximus.</p>
+                            <h4><b>Vision</b></h4>
+                            <p>To create an extremely effective 
+                                online tuition platform that not only 
+                                produces very high level of students achievements
+                                 but also helps to train the next generation of 
+                                 educators who are passionate.</p>
                         </div>
                     </div>
                 </div>
                 </div>
             </div>
         </div>
+        
+ <div class="container2">
+ <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
+ <p style="font-size: large;">Ilearn tuition is trusted by thousands of learners and teachers
+             across the world.<br> The aim of this tuition platform is to 
+             make sure the academic needs of the learners are cared 
+             for and learners enjoy learning here.<br>Making learners
+              have good progress in their academics and instilling positive 
+              attitude is part of our duty,<br> this comes from the passionate,
+               knowledgeable and dedicated teachers available here.</p>
+               <h2>ABOUT US</h2>
+            </div>
         <div class="container2">
             <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
-            <h1>About Us</h1>
-            <p style="color: brown; font-size: large;"> - We offer a wide range of courses with competent and qualified Teachers 
-                from Key Stage 1 to Key Stage 5.<br>
-                - We do tuitions to students and Pupils from different regions utilizing the online resources, 
-                and our online plartform are easy to use and compatible with most gadgets.<br>
-                - Intrested teacher to work with us? <span><a href="account.html" style="font-size: larger;">Sign Up</a></span>
+            <h1>Operating Principles.</h1>
+            <p style="color: brown; font-size: large;">
+                <b>Ease of operation.</b><br> Design user friendly system and improves them continuously based on your feedbacks.
+The inclusion of everybody in the world.<br>
+ This means that everyone is welcomed regardless of your race, colour or religion.<br>
+<b>Quality of information.</b> From the experienced educators, you are assured of getting quality services here.<br>
+<b>Zero tolerance towards miscreants, spammers and marketers </b>who care about nothing but their profits forgetting the aim of this platform.<br>
+<b>You first.</b> Learners are the future and the teachers are what moulds them.<br>
+ Everything we do is focused on how best to serve the interest of students and teachers.
+ <span><a href="account.html" style="font-size: larger;">Sign Up</a></span>
 
             </p>
         </div>
