cards made to occupy 100% space

--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
                 <div class="card-group">
                     <div class="card">
                         <div class="container">
-                            <h4><b>Current Enrollment </b></h4>
-                            <p>Interior Designer Vestibulum commodo porttitor velit,
-                                eu dignissim sapien. Ut ultricies risus
-                                 quis dolor molestie maximus.</p>
+                            <h4><b>About Us </b></h4>
+ <p>Ilearn tuition is trusted by thousands of learners and teachers
+    across the world.<br> The aim of this tuition platform is to 
+     make sure the academic needs of the learners are cared 
+    for and learners enjoy learning here.<br>Making learners
+     have good progress in their academics and instilling positive 
+    attitude is part of our duty,<br> this comes from the passionate,
+     knowledgeable and dedicated teachers available here.</p>
                         </div>
                     </div>
                     <div class="card">
@@ -75,29 +79,17 @@
                     <div class="card">
                         <div class="container">
                             <h4><b>Vision</b></h4>
-                            <p>To create an extremely effective 
-                                online tuition platform that not only 
-                                produces very high level of students achievements
-                                 but also helps to train the next generation of 
-                                 educators who are passionate.</p>
+  <p>To create an extremely effective 
+     online tuition platform that not only 
+     produces very high level of students achievements
+      but also helps to train the next generation of 
+      educators who are passionate.</p>
                         </div>
                     </div>
                 </div>
                 </div>
             </div>
         </div>
-        
- <div class="container2">
- <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
- <p style="font-size: large;">Ilearn tuition is trusted by thousands of learners and teachers
-             across the world.<br> The aim of this tuition platform is to 
-             make sure the academic needs of the learners are cared 
-             for and learners enjoy learning here.<br>Making learners
-              have good progress in their academics and instilling positive 
-              attitude is part of our duty,<br> this comes from the passionate,
-               knowledgeable and dedicated teachers available here.</p>
-               <h2>ABOUT US</h2>
-            </div>
         <div class="container2">
             <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
             <h1>Operating Principles.</h1>
