intergrated with 2 pages

--- a/index.html
+++ b/index.html
@@ -53,14 +53,8 @@
                 <div class="card-group">
                     <div class="card">
                         <div class="container">
-                            <h4><b>About Us </b></h4>
- <p>Ilearn tuition is trusted by thousands of learners and teachers
-    across the world.<br> The aim of this tuition platform is to 
-     make sure the academic needs of the learners are cared 
-    for and learners enjoy learning here.<br>Making learners
-     have good progress in their academics and instilling positive 
-    attitude is part of our duty,<br> this comes from the passionate,
-     knowledgeable and dedicated teachers available here.</p>
+                            <h4><b>ABOUT US</b></h4>
+                            <a href="about.html">Get insights of us.</a>
                         </div>
                     </div>
                     <div class="card">
@@ -79,12 +73,7 @@
                     <div class="card">
                         <div class="container">
                             <h4><b>Vision</b></h4>
-  <p>To create an extremely effective 
-     online tuition platform that not only 
-     produces very high level of students achievements
-      but also helps to train the next generation of 
-      educators who are passionate.</p>
-                        </div>
+                            <a href="about.html">Learn more about our vision</a>
                     </div>
                 </div>
                 </div>
