removed pages with unncessary information

--- a/about.html
+++ b/about.html
@@ -48,7 +48,24 @@
     produces very high level of students achievements
      but also helps to train the next generation of 
      educators who are passionate.</p>
-                       </div>
+<h1>MODE OF PAYMENT</h1>
+p>Our Payments are Made per Session. </p>
+                           
+   <ul>
+  <li>Key Stage 1 - 2 = $20</li>
+    <li>Key Stage 3 - 4 = $25</li>
+   <li>Key Stage 5     = $30</li>
+ </ul>
+   </p>
+   <h1>Our Working Principles</h1>
+   <p style="color: brown; font-size: large;">
+    <b>Ease of operation.</b><br> Design user friendly system and improves them continuously based on your feedbacks.
+The inclusion of everybody in the world.<br>
+This means that everyone is welcomed regardless of your race, colour or religion.<br>
+<b>Quality of information.</b> From the experienced educators, you are assured of getting quality services here.<br>
+<b>Zero tolerance towards miscreants, spammers and marketers </b>who care about nothing but their profits forgetting the aim of this platform.<br>
+<b>You first.</b> Learners are the future and the teachers are what moulds them.<br>
+Everything we do is focused on how best to serve the interest of students and teachers.
 </body>
 <footer>
     iLearn Tuitions.<br>
