--- a/index.html
+++ b/index.html
@@ -60,14 +60,7 @@
                     <div class="card">
                         <div class="container">
                             <h4><b>Mode of Payment Per Student. </b></h4>
-                            <p>Our Payments are Made per Session. </p>
-                            <p>
-                                <ul>
-                                    <li>Key Stage 1 - 2 = $20</li>
-                                    <li>Key Stage 3 - 4 = $25</li>
-                                    <li>Key Stage 5     = $30</li>
-                                </ul>
-                            </p>
+                        <a href="about.html">Click to see Our packages</a>
                         </div>
                     </div>
                     <div class="card">
@@ -83,14 +76,11 @@
             <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
             <h1>Operating Principles.</h1>
             <p style="color: brown; font-size: large;">
-                <b>Ease of operation.</b><br> Design user friendly system and improves them continuously based on your feedbacks.
-The inclusion of everybody in the world.<br>
- This means that everyone is welcomed regardless of your race, colour or religion.<br>
-<b>Quality of information.</b> From the experienced educators, you are assured of getting quality services here.<br>
-<b>Zero tolerance towards miscreants, spammers and marketers </b>who care about nothing but their profits forgetting the aim of this platform.<br>
-<b>You first.</b> Learners are the future and the teachers are what moulds them.<br>
- Everything we do is focused on how best to serve the interest of students and teachers.
- <span><a href="account.html" style="font-size: larger;">Sign Up</a></span>
+                <b>Ease of operation.</b><br> 
+<b>Quality of information.</b> <br>
+<b>Zero tolerance towards miscreants, spammers and marketers </b><br>
+<b>You first.</b> <br>
+ <span><a href="about.html" style="font-size: larger;">Read More.</a></span>
 
             </p>
         </div>
