--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                 <li><a href="account.html">Account</a></li>
             </div>
         </nav>
-  <h1>ABOUT US</h1>
+  <h1 style="margin-top: 10%;">ABOUT US</h1>
   <p>Ilearn tuition is trusted by thousands of learners and teachers
     across the world.<br> The aim of this tuition platform is to 
      make sure the academic needs of the learners are cared 
@@ -49,8 +49,8 @@
      but also helps to train the next generation of 
      educators who are passionate.</p>
 <h1>MODE OF PAYMENT</h1>
-p>Our Payments are Made per Session. </p>
-                           
+<p>Our Payments are Made per Session. 
+                     
    <ul>
   <li>Key Stage 1 - 2 = $20</li>
     <li>Key Stage 3 - 4 = $25</li>
