added homepage on mission

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="card">
                         <div class="container">
-                            <h4><b>Mode of Payment Per Student. </b></h4>
+                            <h4><b>Mode of Payment Per Learner. </b></h4>
                         <a href="about.html">Click to see Our packages</a>
                         </div>
                     </div>
