--- a/mission.html
+++ b/mission.html
@@ -72,7 +72,8 @@
                 <li>good communicator </li>
                 <li>reflective</li>
             </ul>In order to fit in the society.
-            </p>
+            </p><br>
+           <a href="index.html" style="color:brown; font-size: larger;"><b>Back To Homepage</b></a>
         </div>
         <h1>Contact Us</h1>
         <a href="tel:+254707872520" target="blank"><img src="images/Cell.png" alt="cell phone" width="50" height="50"></a>
