added a button for homepage for all pages

--- a/about.html
+++ b/about.html
@@ -66,6 +66,7 @@ This means that everyone is welcomed regardless of your race, colour or religion
 <b>Zero tolerance towards miscreants, spammers and marketers </b>who care about nothing but their profits forgetting the aim of this platform.<br>
 <b>You first.</b> Learners are the future and the teachers are what moulds them.<br>
 Everything we do is focused on how best to serve the interest of students and teachers.
+<a href="index.html" style="color:brown; font-size: larger;"><b>Back To Homepage</b></a>
 </body>
 <footer>
     iLearn Tuitions.<br>
