--- a/account.html
+++ b/account.html
@@ -78,7 +78,7 @@
       </form>
     </div>
   </div>
-
+  <a href="index.html" style="color:brown; font-size: larger;"><b>Back To Homepage</b></a>
   <script src="script.js"></script>
 </body>
 <footer>
