--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container2">
             <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
             <h1>Operating Principles.</h1>
-            <p style="color: brown; font-size: large;">
+            <p style="color: brown; font-size: medium;">
                 <b>Ease of operation.</b><br> 
 <b>Quality of information.</b> <br>
 <b>Zero tolerance towards miscreants, spammers and marketers </b><br>
