statements of conflict removed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="card-group">
                     <div class="card">
                         <div class="container">
-                            <h4><b>ABOUT US</b></h4>
+                            <h4><b>About Us</b></h4>
                             <a href="about.html">Get insights of us.</a>
                         </div>
                     </div>
