font color for page 4 removed and replaced with black

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
  </ul>
    </p>
    <h1>Our Working Principles</h1>
-   <p style="color: brown; font-size: large;">
+   <p style="color: black; font-size: large;">
     <b>Ease of operation.</b><br> Design user friendly system and improves them continuously based on your feedbacks.
 The inclusion of everybody in the world.<br>
 This means that everyone is welcomed regardless of your race, colour or religion.<br>
