links made bolder

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </p>
                 <button type="button"><a href="account.html">Enroll Now to Our Tuitions Programs</a></button>
             </div>
-            <li><a href="account.html" style="font-size: larger; color:brown">Sign In</a></li><br>
-            <li><a href="account.html" style="font-size: larger; color:brown;">Sign Up</a></li><br>
+            <li><a href="account.html" style="font-size: larger; color:brown">Sign In</a></li>
+            <li><a href="account.html" style="font-size: larger; color:brown;">Sign Up</a></li>
             <li><a href="mission.html" style="font-size: larger; color:brown;">Mission Statement</a></li>
             <div class="image">
                 <img src="images/nice.jpeg" alt="people" width="200px" height="200px">
