breaker line betwewn the words

--- a/account.html
+++ b/account.html
@@ -42,7 +42,8 @@
         <input type="text" placeholder="Username" />
         <input type="password" placeholder="Password" />
         <button>Sign In</button>
-      </form>
+      </form><br>
+      <hr>
     </div>
     <div class="form-container sign-up-container">
         <form action="#">
@@ -64,6 +65,7 @@
           <button>Sign Up</button>
         </form>
       </div>
+      <hr>
     <div class="form-container sign-up-container">
       <form action="#">
         <h1>Sign Up<br>
