--- a/account.html
+++ b/account.html
@@ -63,9 +63,9 @@
             <input type="submit" value="Upload CV">
           </form>
           <button>Sign Up</button>
-        </form>
+        </form><br>
+        <hr>
       </div>
-      <hr>
     <div class="form-container sign-up-container">
       <form action="#">
         <h1>Sign Up<br>
