--- a/account.html
+++ b/account.html
@@ -75,7 +75,7 @@
         <input type="text" placeholder="Year Group" />
         <input type="text" placeholder="Phone Number" />
         <input type="password" placeholder="Password" />
-        <input type="text" placeholder="Subjects" />
+        <input type="text" placeholder="Subjects" /><br>
         <button>Sign Up</button>
       </form>
     </div>
