buttons made to have same height

--- a/account.html
+++ b/account.html
@@ -40,7 +40,7 @@
          Sign In to access your account
         </h1>
         <input type="text" placeholder="Username" />
-        <input type="password" placeholder="Password" />
+        <input type="password" placeholder="Password" /><br>
         <button>Sign In</button>
       </form><br>
       <hr>
