buttons made to have same height

--- a/account.html
+++ b/account.html
@@ -18,15 +18,24 @@
             <div class="nav-links">
                 <li><a href="index.html">Dashboard</a></li>
                 <li>
-                <a >Courses &#9662;</a>
-                <ul class="dropdown">
-                    <li><a href="#">English Activities </a></li>
-                    <li><a href="#">Mathematics Activities </a></li>
-                    <li><a href="#">Environmental Activities </a></li>
-                    <li><a href="#">language Activities </a></li>
-                    <li><a href="#">Agricultural  Activities </a></li>
-                    <li><a href="#">Environmental Activities </a></li>
-                  </ul>
+                  <a>Courses &#9662;</a>
+                  <ul class="dropdown">
+                      <li><a href="#">Zoology </a></li>
+                      <li><a href="#">Science/Environmental Science</a></li>
+                      <li><a href="#">Phychology</a></li>
+                      <li><a href="#">English First Language </a></li>
+                      <li><a href="#">English Second Language </a></li>
+                      <li><a href="#">statistics </a></li>
+                      <li><a href="#">Physics/Chemistry/Biology</a></li>
+                      <li><a href="#">Music</a></li>
+                      <li><a href="#">Maths</a></li>
+                      <li><a href="#">History/Geography </a></li>
+                      <li><a href="#">French/Germany</a></li>
+                      <li><a href="#">Accountancy </a></li>
+                      <li><a href="#">Computer science </a></li>
+                      <li><a href="#">Academic Writing</a></li>
+                    </ul>
+              </li>
             </li>
                 <li><a href="#">Calendar</a></li>
                 <li><a href="#">Useful Links</a></li>
