blueviolet added to links

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
   <h1 style="margin-top: 10%;">ABOUT US</h1>
-  <p>Ilearn tuition is trusted by thousands of learners and teachers
+  <p style="background-color: bisque;">Ilearn tuition is trusted by thousands of learners and teachers
     across the world.<br> The aim of this tuition platform is to 
      make sure the academic needs of the learners are cared 
     for and learners enjoy learning here.<br>Making learners
@@ -40,14 +40,14 @@
 <h1>MODE OF PAYMENT</h1>
 <p>Our Payments are Made per Session. 
                      
-   <ul>
+   <ul style="text-align: center;color: blueviolet;">
   <li>Key Stage 1 - 2 = $20</li>
     <li>Key Stage 3 - 4 = $25</li>
    <li>Key Stage 5     = $30</li>
  </ul>
    </p>
    <h1>Our Working Principles</h1>
-   <p style="color: black; font-size: large;">
+   <p style="color: black; font-size: large; background-color: burlywood;">
     <b>Ease of operation.</b><br> Design user friendly system and improves them continuously based on your feedbacks.
 The inclusion of everybody in the world.<br>
 This means that everyone is welcomed regardless of your race, colour or religion.<br>
