--- a/account.html
+++ b/account.html
@@ -63,6 +63,7 @@
           <input type="text" placeholder="Subjects (max 2)" />
           <input type="numbers" placeholder="Phone Number" />
           <input type="text" placeholder="Time Available" />
+          <input type="text" placeholder="Curriculumn" />
           <input type="numbers" placeholder="Teacher Registration number" />
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
@@ -81,6 +82,7 @@
             Students Account</h1>
         <input type="text" placeholder="Firstname" />
         <input type="text" placeholder="Secondname" />
+        <input type="text" placeholder="Curriculumn" />
         <input type="text" placeholder="Year Group" />
         <input type="text" placeholder="Phone Number" />
         <input type="password" placeholder="Password" />
