removed subject section on students account

--- a/account.html
+++ b/account.html
@@ -85,8 +85,7 @@
         <input type="text" placeholder="Curriculumn" />
         <input type="text" placeholder="Year Group" />
         <input type="text" placeholder="Phone Number" />
-        <input type="password" placeholder="Password" />
-        <input type="text" placeholder="Subjects" /><br>
+        <input type="password" placeholder="Password" /><br>
         <button>Sign Up</button>
       </form>
     </div>
