--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
                         <li><a href="#">Accountancy </a></li>
                         <li><a href="#">Computer science </a></li>
                         <li><a href="#">Academic Writing</a></li>
-                      </ul>
-                </li>
-                    <li><a href="#">Calendar</a></li>
-                    <li><a href="#">Useful Links</a></li>
-                    <li><a href="account.html">Account</a></li>
+                      </ul></li>
+                <a href="#">Calendar</a>
+                <a href="#">Links</a>
                 </div>
             </nav>
             <div class="text">
@@ -80,6 +78,11 @@
                 </div>
             </div>
         </div>
+<br>
+        <fieldset><legend style="color:blue; font-size: larger; "><b>ACCESS OUR FREE RESOURCES.</b></legend>
+            <a href="">Chemistry</a>
+            <a href=""> ss</a>
+        </fieldset>
         <div class="container2">
             <img src="images/bookshelf.jpeg" alt="Image" width="100px" height="100px">
             <h1>Operating Principles.</h1>
